    - New command '/townyadmin toggle withdraw'.
    - Added two new commands to see who's online
      '/town online'
      '/nation online'
    - Fix for deleted residents in friend lists causing errors upon deletion, and the same error with nation deletion and enemy/ally lists.
    - Prevent sticky pistons pulling blocks across plot boundaries (if different owners).
    - Fix for getLastLocation() needing to throw a NullPointerException. The players location is now set upon creation of the cache.
    - Added a Maxplots permissions node. If a group doesn't have this node or the node is set to -1 Towny will default back to the max_plots_per_resident in config.
      Setting max_plots_per_resident to -1 with no permission node, or a node set to -1 will allow infinite plots.
      
      Eg usage:

		groups:
		  Default:
		    default: true
		    permissions:
		    - general.spawn
		    inheritance: []
		    info:
		      prefix: ''
		      build: true
		      suffix: ''
		      towny_maxplots: 1
		  Admins:
		    default: false
		    permissions:
		    - '*'
		    inheritance:
		    info:
		      prefix: ''
		      build: true
		      suffix: ''
		      towny_maxplots: -1
		      
    - Fixed old resident deletion for the new config system using seconds instead of milliseconds.
    - Towny now correctly defaults to Bukkits Permissions if using_permissions is set to false in the config.
    - Added XcraftGate to the plugin.yml as a recognised multiworld plugin.
    - Added a new unclaim_delete under Plot management in global_town_settings. This will delete any items listed when a town unclaims a plot or a town is deleted.
v0.76.1:
    - Fixed error with '/town buy' granting the wrong number of blocks.
    - Fixed converting seconds to milliseconds for mobremoval and new day timers.
    - Fixed an error when using '/town claim #'.