@@ -511,3 +511,5 @@ v0.76.1:
     - Fixed error with '/town buy' granting the wrong number of blocks.
     - Fixed converting seconds to milliseconds for mobremoval and new day timers.
     - Fixed an error when using '/town claim #'.
+    - Fixed an error with '/town claim auto' (I broke it fixing the above command).
+    - Explosions in the nether caused by using beds are now blocked if a town is there and set to block explosions. However, the fires it generates can not be blocked.
